--- a/templates/index.html
+++ b/templates/index.html
@@ -227,7 +227,7 @@ align-items: center;
             <div class="text">
                 <h1>Titanic Survival</h1> 
             </div>  
-         <form class="Form" action="http://127.0.0.1:5000/prediction" method="POST">       
+         <form class="Form" action="https://titanic-survival-project.herokuapp.com/prediction" method="POST">       
              <h1>Titanic Survival</h1>
              <div class="formInput">
                  <div class="formInputContainer_radio1">
